k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress-srv
 annotations:
  kubernetes.io/ingress.class: nginx
  nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
 rules:
  - host: rattuz.me
    http:
     paths:
      - path: /api/platforms
        pathType: Prefix
        backend: 
         service:
          name: platforms-clusterip-srv
          port:
           number: 80
      - path: /api/commands/platforms
        pathType: Prefix
        backend:
         service: 
          name: commands-clusterip-srv
          port:
           number: 80
